Frontend/sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

11-06-2015 18:33:
C:\Users\sevat_000\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:31
        throw ex;
              ^
Error: Cannot find module 'through2'
    at Function.Module._resolveFilename (module.js:336:15)
    at Function.Module._load (module.js:278:25)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at Object.<anonymous> (E:\Projects\P-app\Frontend\node_modules\p-gulp-wrap\index.js:2:15)
    at Module._compile (module.js:460:26)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)


11-08-2015 11:08:
E:\Projects\P-app\Frontend\node_modules\p-gulp-template\node_modules\cheerio\lib\parse.js:55
    var oldParent = node.parent || node.root,
                        ^
TypeError: Cannot read property 'parent' of undefined
    at Function.exports.update (E:\Projects\P-app\Frontend\node_modules\p-gulp-template\node_modules\cheerio\lib\parse.js:55:25)
    at module.exports (E:\Projects\P-app\Frontend\node_modules\p-gulp-template\node_modules\cheerio\lib\parse.js:17:11)
    at Function.exports.load (E:\Projects\P-app\Frontend\node_modules\p-gulp-template\node_modules\cheerio\lib\static.js:19:14)
    at templatize (E:\Projects\P-app\Frontend\node_modules\p-gulp-template\index.js:15:14)
    at E:\Projects\P-app\Frontend\node_modules\p-gulp-template\index.js:8:2
    at fs.js:263:20
    at FSReqWrap.oncomplete (fs.js:95:15)


11-14-2015 15:06:
E:\Projects\P-app\Frontend\.sublime-gulp-tmp.js:9
<<<<<<< HEAD
^^
SyntaxError: Unexpected token <<
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\sevat_000\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\sevat_000\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:460:26)


11-14-2015 15:06:
E:\Projects\P-app\Frontend\.sublime-gulp-tmp.js:31
<<<<<<< HEAD
^^
SyntaxError: Unexpected token <<
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\sevat_000\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\sevat_000\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:460:26)


11-14-2015 15:06:
E:\Projects\P-app\Frontend\.sublime-gulp-tmp.js:96
});
   
SyntaxError: Unexpected end of input
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\sevat_000\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\sevat_000\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:460:26)
